--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -34,6 +34,9 @@
    <p>
       The sun dipped below the horizon, casting an orange glow over the calm ocean. Waves gently lapped against the shore, creating a peaceful rhythm that echoed in the evening air. A light breeze rustled the leaves of nearby trees, adding a soft whisper to the quiet surroundings. The sky, now painted in shades of pink and purple, slowly darkened as stars began to emerge. It was one of those moments that felt timeless, as if the world had paused just for a while. In the distance, the soft hum of a boat's engine could be heard, a reminder that life continued beyond the serene shoreline. But for now, everything was at peace, and all that mattered was the beauty of the moment.
    </p>
+   <p>
+    The sun dipped below the horizon, casting an orange glow over the calm ocean. Waves gently lapped against the shore, creating a peaceful rhythm that echoed in the evening air. A light breeze rustled the leaves of nearby trees, adding a soft whisper to the quiet surroundings. The sky, now painted in shades of pink and purple, slowly darkened as stars began to emerge. It was one of those moments that felt timeless, as if the world had paused just for a while. In the distance, the soft hum of a boat's engine could be heard, a reminder that life continued beyond the serene shoreline. But for now, everything was at peace, and all that mattered was the beauty of the moment.
+ </p>
 
   </section>
 
