--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax Website</title>
+    <title>Developer | Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="pimg1">
-        <div class="ptext">
-            <span class="textBg"> Explore Nature </span>
+    <section class="hero_section">
+        <div class="text_container">
+
+            <h2>Hi, I am John Doe</h2>
+            <h1>FULL STACK DEVELOPER</h1> 
+            
 
         </div>
     </section>
